--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,7 @@
   --gray-700: #29292E;
   --gray-800: #202024;
   --gray-900: #121214;
+  --green-300: #00B37E;
   --green-500: #00875F;
 }
 
@@ -15,6 +16,10 @@
   padding: 0;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
+}
+
+:focus {
+  outline: none;
 }
 
 body {
