--- a/src/global.css
+++ b/src/global.css
@@ -7,8 +7,11 @@
   --gray-700: #29292E;
   --gray-800: #202024;
   --gray-900: #121214;
+
   --green-300: #00B37E;
   --green-500: #00875F;
+
+  --red-500: #F75A68;
 }
 
 * {
