--- a/src/assets/css/App.module.css
+++ b/src/assets/css/App.module.css
@@ -6,5 +6,14 @@
   max-width: 70rem;
   margin: 2rem auto;
   padding: 0 1rem;
-  
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 87.6%;
+  }
+
+  .wrapper {
+    grid-template-columns: 1fr;
+  }
 }
