create features like, delete and create comment

--- a/src/assets/css/Post.module.css
+++ b/src/assets/css/Post.module.css
@@ -110,6 +110,11 @@
   transition: background-color .4s ease;
 }
 
-.commentForm button[type=submit]:hover {
+.commentForm button[type=submit]:not(:disabled):hover {
   background: var(--green-300);
+}
+
+.commentForm button[type=submit]:disabled {
+  opacity: .7;
+  cursor: not-allowed;
 }
