--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -24,7 +24,7 @@
 }
 
 body , input, button {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 140%;
