--- a/todo-list/src/assets/css/Todo.module.css
+++ b/todo-list/src/assets/css/Todo.module.css
@@ -15,6 +15,7 @@
 }
 
 .checkboxWrapper {
+  flex: 1;
   display: flex;
   gap: .75rem;
   background: transparent;
@@ -56,6 +57,7 @@
 }
 
 .todo button:last-of-type {
+  flex: 0;
   background: transparent;
   color: var(--grey-300);
   border: none;
